Update app.scss - fix header z-index

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -57,7 +57,7 @@ icon.mini {
     background-color: #000 !important;
     position: fixed;
     width: 100%;
-    z-index: 9999;
+    z-index: 100;
     top: 0;
     left: 0;
 }
